# python-project-template

./: LICENSE  README.md  copier.yml
.github/workflows/: ci.yml  main.yml  pre-commit-autoupdate.yml
project_template/: .editorconfig  .gitignore  .pre-commit-config.yaml  .python-version  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  {% if include_docs %}mkdocs.yml{% endif %}  {% if license=='Apache' %}LICENSE{% endif %}  {% if license=='BSD' %}LICENSE{% endif %}  {% if license=='MIT' %}LICENSE{% endif %}
project_template/.github/: pull_request_template.md
project_template/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
project_template/.github/workflows/: cd.yml  ci.yml
project_template/src/{{python_name}}/: __init__.py
project_template/{% if include_docs %}docs{% endif %}/: index.md  reference.md
