[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "{{ project_name }}"
version = "0.1.0"
authors = [
  { name = "{{ full_name }}", email = "{{ email }}" },
]
description = "{{ project_short_description }}"
readme = "README.md"
requires-python = ">={{ min_python_version }}"
{%- if license == "BSD" %}
license = "BSD-3-Clause"
{%- elif license == "Apache" %}
license = "Apache-2.0"
{%- elif license == "MIT" %}
license = "MIT"
{%- elif license == "GPL" %}
license = "GPL-3.0-or-later"
{%- endif %}
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = []

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  "pre-commit>=4.0",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
]
lint = [
  "ruff>=0.15",
]

[project.urls]
Homepage = "{{ url }}"
"Bug Tracker" = "{{ url }}/issues"
Discussions = "{{ url }}/discussions"
Changelog = "{{ url }}/releases"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["{{ python_name }}"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.ty.environment]
python-version = "{{ min_python_version }}"

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.ty.src]
include = ["src", "tests"]

[tool.ruff]
src = ["src"]
exclude = []
line-length = 88  # how long you want lines to be

[tool.ruff.format]
docstring-code-format = true  # code snippets in docstrings will be formatted

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
]
ignore = [
  "PLR",    # Design related pylint codes
  "ISC001", # Conflicts with formatter
]
unfixable = [
  "F401",   # Would remove unused imports
  "F841",   # Would remove unused variables
]
flake8-unused-arguments.ignore-variadic-names = true  # allow unused *args/**kwargs
{%- if typing != "no_typing" -%}
isort.required-imports = ["from __future__ import annotations"]
{%- endif %}
