[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "{{ project_name }}"
version = "0.1.0"
authors = [
  { name = "{{ full_name }}", email = "{{ email }}" },
]
description = "{{ project_short_description }}"
readme = "README.md"
requires-python = ">={{ min_python_version }}"
{%- if license == "BSD" %}
license = "BSD-3-Clause"
{%- elif license == "Apache" %}
license = "Apache-2.0"
{%- elif license == "MIT" %}
license = "MIT"
{%- elif license == "GPL" %}
license = "GPL-3.0-or-later"
{%- endif %}
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = []

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  "pre-commit>=4.0",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
]
lint = [
  "ruff>=0.15",
]

[project.urls]
Homepage = "{{ url }}"
"Bug Tracker" = "{{ url }}/issues"
Discussions = "{{ url }}/discussions"
Changelog = "{{ url }}/releases"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["{{ python_name }}"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.ty.environment]
python-version = "{{ min_python_version }}"

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.ty.src]
include = ["src"]

[tool.ruff]
line-length = 88
target-version = "py{{ min_python_version | replace('.', '') }}"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # Pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "C4",   # flake8-comprehensions
  "RUF",  # Ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]

[tool.ruff.lint.isort]
known-first-party = ["{{ python_name }}"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
